chore: env vars

--- a/hosting/.env
+++ b/hosting/.env
@@ -23,10 +23,9 @@ BUDIBASE_ENVIRONMENT=PRODUCTION
 SQL_MAX_ROWS=
 
 # An admin user can be automatically created initially if these are set
-BB_ADMIN_USER_EMAIL=
-BB_ADMIN_USER_PASSWORD=
+BB_ADMIN_USER_EMAIL=asdasd
+BB_ADMIN_USER_PASSWORD=asdasd
 
 # A path that is watched for plugin bundles. Any bundles found are imported automatically/
 PLUGINS_DIR=
 ROLLING_LOG_MAX_SIZE=
-
