--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -70,7 +70,9 @@
     "dayjs": "^1.10.8",
     "downloadjs": "1.4.7",
     "fast-json-patch": "^3.1.1",
+    "jszip": "^3.10.1",
     "lodash": "4.17.21",
+    "mammoth": "^1.10.0",
     "marked": "^15.0.8",
     "posthog-js": "^1.118.0",
     "remixicon": "2.5.0",
@@ -82,9 +84,9 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@budibase/client": "*",
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.12",
+    "@budibase/client": "*",
     "@rollup/plugin-replace": "^5.0.3",
     "@rollup/plugin-typescript": "8.3.0",
     "@roxi/routify": "2.18.18",
